<resources>
    <string name="app_name">Availaballs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="font_roboto">roboto</string>
    <string name="font_stoke">stoke</string>
    <string name="font_icon">icomoons</string>
    <string name="title_activity_maps">Map</string>

    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>

    <string name="hintTextJamLapangan">*Jika kamu punya jadwal berdeda di hari tertentu,&#10; bisa
        ditambahkan di langkah selanjutnya
    </string>
    <string name="hintTextHargaLapangan">*Jika kamu punya harga special di hari atau jam tertentu,&#10;
        bisa ditambahkan di langkah selanjutnya
    </string>
    <string name="judulHargaLapangan">Berapa Harga Normal lapanganmu per jam?</string>
    <string name="judulHariBukaLapangan">Hari apa saja Lapangan ini beroperasi?</string>
    <string name="judulJamBukaLapangan">Jam berapa Lapangan ini beroperasi?</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.
    </string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="upload_foto_lapangan">upload foto lapanganmu &#xa;*720x340px</string>

    <string-array name="array_itemjam">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
    </string-array>

    <string-array name="kota">
        <item>Medan</item>
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Papua</item>
    </string-array>

    <string-array name="jumlah_lapangan">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
