<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusableInTouchMode="true"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judulHariBukaLapangan"
                android:textStyle="bold"
                android:textColor="@color/clrlinedark"
                android:textSize="16dp"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="20dp">

                    <CheckBox
                        android:id="@+id/checkBoxSenin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/senin"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />

                    <CheckBox
                        android:id="@+id/checkBoxSelasa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selasa"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />

                    <CheckBox
                        android:id="@+id/checkBoxRabu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rabu"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <CheckBox
                        android:id="@+id/checkBoxKamis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kamis"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />

                    <CheckBox
                        android:id="@+id/checkBoxJumat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumat"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />

                    <CheckBox
                        android:id="@+id/checkBoxSabtu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sabtu"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <CheckBox
                        android:id="@+id/checkBoxMinggu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minggu"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/clrlinedark"
                android:text="@string/judulJamBukaLapangan"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Spinner
                android:id="@+id/spinnerJamBuka"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:entries="@array/array_itemjam"
                style="@style/SpinnerTheme"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="-"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <Spinner
                android:id="@+id/spinnerJamTutup"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:entries="@array/array_itemjam"
                style="@style/SpinnerTheme"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/hintTextJamLapangan"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/clrlinedark"
                android:text="@string/judulHargaLapangan"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/hargabutton"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <bolalob.develops.stud11314025.availaballs.Widget.CustomFontTextView
                android:id="@+id/iconEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Rp"
                android:textStyle="bold"
                app:font="@string/font_icon"
                android:textColor="@color/clrlinedark"
                android:layout_marginLeft="20dp">

            </bolalob.develops.stud11314025.availaballs.Widget.CustomFontTextView>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:theme="@style/TextLabelLogin">

                <bolalob.develops.stud11314025.availaballs.Widget.CustomFontEditTextView
                    android:id="@+id/eTEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTint="@color/clrline"
                    android:textColor="@color/clrlinedark"
                    android:textColorHighlight="@color/clrlinedark"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="normal"
                    android:background="@android:color/transparent"
                    app:font="@string/font_roboto" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/hintTextJamLapangan"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/circlebutton"
            android:text="Selesai"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:layout_gravity="center"
            android:onClick="finishStep"/>

    </LinearLayout>

</ScrollView>